# src/controllers/patient.ts
@@ -4,7 +4,9 @@ import Patient from "../entities/patients/patient";
 import Patientverification from "../entities/patients/patientVerification";
 import TwilioService from "../services/sms";
 import UtilSever from "../utils/util";
-
+import { throwTwilioAndGenericErrorMessage, throwTypeOrmEntityFieldError, throwTypeOrmEntityNotFoundErrorMessage, throwTypeOrmQueryFailedErrorMessage } from "../utils/error";
+import { EntityNotFoundError, QueryFailedError } from "typeorm";
+import { ValidationError } from "class-validator";
 
 
 /**
@@ -12,12 +14,7 @@ import UtilSever from "../utils/util";
  * @param {Request} req - request object from the request body
  * @param {Response} res - response object to send a response back to the client
  * @example - localhost:3000/api/v1/register_user
- * @example - request body - {
- *          "email": "sample@test.com",
- *          "password": "samplepassword",
- *          "firstname": "sample",
- *          "lastname": "sample",
- *          "phone": "1234567890"
+ * @example - request body - {}
  * }
  * @returns {object} - returns an object with patient verification details
  */
@@ -28,7 +25,16 @@ async function register_patient(req: Request, res: Response): Promise<void> {
         // await patient.save();
         res.status(201).send({ code: 201, message: 'registration successful. verification token sent', result: patient });
     } catch (err) {
-        res.status(400).send({ code: 400, error: "error invalid data provided, check phone or others" });
+        // console.log('errr22', err,  err[0].constraints, err[0] instanceof ValidationError, err instanceof QueryFailedError);
+        if (err instanceof QueryFailedError) {
+            const errMsg = throwTypeOrmQueryFailedErrorMessage(err);
+            res.status(400).send({ code: 400, error: errMsg });
+        }
+        else if (err[0] instanceof ValidationError) {
+            const errMsg = throwTypeOrmEntityFieldError(err);
+            res.status(400).send({ code: 400, error: errMsg });
+        }
+        else res.status(400).send({ code: 400, error: throwTwilioAndGenericErrorMessage(err) });
     }
 }
 
@@ -44,7 +50,8 @@ async function verify_email(req: Request, res: Response): Promise<void> {
         await Patient.verifyEmail(emailverify.user_id, "verify_email"); // FIXME check if this method accepting 2nd arguments is still useful
         res.status(200).send({ code: 200, message: 'email verification successful', result: emailverify });
     } catch (err) {
-        res.status(400).send({ code: 400, error: "wrong verification token or token exired" });  // as error to infer the err
+        console.log(err);
+        res.status(400).send({ code: 400, error: err });  // as error to infer the err
     }
 }
 
@@ -56,12 +63,16 @@ async function verify_email(req: Request, res: Response): Promise<void> {
  */
 async function verify_phone(req: Request, res: Response): Promise<void> {
     try {
-        await Patientverification.verifyphone(req.query.phone as string, req.query.code as string);
-        const patient = await Patient.findOneBy({ phone: req.query.phone as string });
-        await Patient.verifyPhone(patient!._id, "verify_phone"); // FIXME check if this method accepting 2nd arguments is still useful
-        res.status(200).send({ code: 200, message: 'phone verification successful', result: patient });
+        await Patientverification.verifyphone(req.body.phone as string, req.body.code as string);
+        const patient = await Patient.findOneByOrFail({ phone: req.body.phone as string });
+        const data = await Patient.verifyPhone(patient!._id, "verify_phone"); // FIXME check if this method accepting 2nd arguments is still useful
+        res.status(200).send({ code: 200, message: 'phone verification successful', result: data });
     } catch (err) {
-        res.status(400).send({ code: 400, error: "wrong verification token or token exired" });  // as error to infer the err
+        if (err instanceof EntityNotFoundError) {
+            const errMsg = throwTypeOrmEntityNotFoundErrorMessage(err);
+            res.status(400).send({ code: 400, error: errMsg });
+        }
+        else res.status(400).send({ code: 400, error: throwTwilioAndGenericErrorMessage(err) });  // as error to infer the err
     }
 }
 
@@ -78,9 +89,9 @@ async function login_patient(req: Request, res: Response): Promise<void> {
             req.body.password
         );
         const token = await patient.generateAuthtoken();
-        res.status(200).send({ code: 200, message: "login succesful", patient, token });
+        res.status(200).send({ code: 200, message: "login succesful", patient });
     } catch (err) {
-        res.status(400).send({ code: 400, error: (err as Error).message });
+        res.status(401).send({ code: 401, error: (err as Error).message });
     }
 }
 
@@ -93,9 +104,14 @@ async function login_patient(req: Request, res: Response): Promise<void> {
 async function get_patient_by_id(req: IPatientRequest, res: Response): Promise<void> {
     try {
         const patient = await Patient.findOneByOrFail({ _id: req.params.id });
+        delete patient.password;
         res.status(200).send({ code: 200, message: "patient retrive successfully", result: patient });
     } catch (err) {
-        res.status(400).send({ code: 400, error: (err as Error).message });
+        if (err instanceof EntityNotFoundError) {
+            const errMsg = throwTypeOrmEntityNotFoundErrorMessage(err);
+            res.status(400).send({ code: 400, error: errMsg });
+        }
+        else res.status(400).send({ code: 400, error: throwTwilioAndGenericErrorMessage(err) });
     }
 }
 
@@ -124,7 +140,7 @@ async function update_patient(req: IPatientRequest, res: Response): Promise<void
 async function forgotpassword(req: Request, res: Response): Promise<void> {
     try {
         req.body.phone ? await Patient.forgotpasswordSMS(req.body.phone) : await Patient.forgotpassword(req.body.email);
-        res.status(201).send({ code: 201, status: "Password reset link sent to your email and phone or just phone" });
+        res.status(201).send({ code: 201, status: "Password reset code on it way, check device" });
     }
     catch (err) {
         res.status(400).send({ code: 400, error: (err as Error).message });
@@ -156,6 +172,7 @@ async function resetpassword(req: Request, res: Response): Promise<void> {
  * @returns {object} - returns a user object
  */
 async function me(req: IPatientRequest, res: Response): Promise<void> {
+    
     res.status(200).send({ code: 200, message: "patient profile returned successfully", result: { user: req.patient, token: req.token } }); // INFO does the profile needs to return token
 }
 
@@ -170,11 +187,16 @@ async function changepassword(req: IPatientRequest, res: Response): Promise<void
         const patient = await Patient.findOneByOrFail({ _id: req.patient._id })!;
         if (patient) {
             await patient.changepassword!(req, req.body.currentpassword, req.body.newpassword);
+            //TODO send sms notification to the patient
             res.status(201).send({ code: 201, message: "Password changed successfully" });
         }
     }
     catch (err) {
-        res.status(400).send({ code: 400, error: (err as Error).message });
+        if (err instanceof EntityNotFoundError) {
+            const errMsg = throwTypeOrmEntityNotFoundErrorMessage(err);
+            res.status(401).send({ code: 401, error: errMsg });
+        }
+        else res.status(400).send({ code: 400, error: throwTwilioAndGenericErrorMessage(err) });
     }
 }
 
@@ -186,11 +208,16 @@ async function changepassword(req: IPatientRequest, res: Response): Promise<void
  */
 async function send_verification_code(req: Request, res: Response): Promise<void> {
     try {
+        await Patient.findOneByOrFail({ phone: req.body.phone })!;
         const ts = new TwilioService();
-        const status = await ts.twiliogenerateandsendtoken(req.query.phone as string, "sms");
+        const status = await ts.twiliogenerateandsendtoken(req.body.phone as string, "sms");
         res.status(201).send({ code: 201, message: "phone verification code sent", result: status });
     } catch (err) {
-        res.status(400).send({ code: 400, error: (err as Error).message });
+        if (err instanceof EntityNotFoundError) {
+            const errMsg = throwTypeOrmEntityNotFoundErrorMessage(err);
+            res.status(401).send({ code: 401, error: errMsg });
+        }
+        else res.status(400).send({ code: 400, error: throwTwilioAndGenericErrorMessage(err) });
     }
 }
 
@@ -203,9 +230,10 @@ async function sms_verification_token(req: Request, res: Response): Promise<void
     try {
         const ts = new TwilioService();
         const code = new UtilSever().generateToken(6);
-        const status = await ts.sendSMS(req.query.phone as string, String(code));
+        const status = await ts.sendSMS(req.body.phone as string, String(code));
         res.status(201).send({ code: 201, message: "phone verification code sent", result: status });
     } catch (err) {
+        //TODO add error handling here
         res.status(400).send({ code: 400, error: (err as Error).message });
     }
 }
